# Socat-Network-Operations-Manager-Python-Variant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  pyproject.toml  socat-manager.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  release.yml  test.yml
certs/: README.md  example-do-not-use.crt  example-do-not-use.key  example-san.cnf  generate-example-cert.sh
conf/: README.md  database-services.conf.example  high-ports.conf.example  ports.conf.example  web-services.conf.example
docs/: DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDE.md  Frequently_Asked_Questions_(FAQ).md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
src/socat_manager/: __init__.py  __main__.py  audit.py  certs.py  cli.py  commands.py  config.py  logging_setup.py  menu.py  process.py  session.py  validation.py  watchdog.py
src/socat_manager/modes/: __init__.py  audit_view.py  batch.py  forward.py  listen.py  redirect.py  status.py  stop.py  tunnel.py
templates/: README.md
templates/logrotate/: socat-manager
templates/socat-profiles/: profiles.conf
templates/systemd/: socat-manager@.service
tests/: conftest.py
tests/integration/: test_capture.py  test_dual_stack.py  test_lifecycle.py  test_menu.py  test_mode_handlers.py  test_modes.py
tests/stubs/: openssl  socat  ss
tests/unit/: __init__.py  test_audit.py  test_certs.py  test_child_reaping.py  test_child_registry_concurrency.py  test_cli.py  test_commands.py  test_config.py  test_ipv6_addressing.py  test_log_level.py  test_logging.py  test_main.py  test_menu_prompts.py  test_port_scoping.py  test_process.py  test_session.py  test_session_liveness.py  test_session_lookup.py  test_session_update.py  test_source_filtering.py  test_stop_reaping.py  test_validation.py  test_watchdog.py
