# ==============================================================================
# FILE        : pyproject.toml
# ==============================================================================
# Synopsis    : Python project configuration for Socat Network Operations Manager
# Description : Defines package metadata, build system, dependencies,
#               pytest configuration, ruff linting rules, and mypy type
#               checking settings. Core package has ZERO external dependencies;
#               dev dependencies are pytest, ruff, and mypy only.
# Version     : 0.9.0
# ==============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socat-manager"
version = "0.9.0"
description = "Session-managed socat network operations platform — Python variant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Sandler73"},
]
keywords = ["socat", "network", "listener", "forwarder", "tunnel", "redirect", "session"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# ZERO external runtime dependencies — standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
socat-manager = "socat_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/Sandler73/Socat-Network-Operations-Manager"
Repository = "https://github.com/Sandler73/Socat-Network-Operations-Manager"
Issues = "https://github.com/Sandler73/Socat-Network-Operations-Manager/issues"

# ---------------------------------------------------------------------------
# setuptools package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests that require real process launches",
    "integration: marks integration tests requiring socat",
    "unit: marks pure unit tests with no external deps",
]

# ---------------------------------------------------------------------------
# ruff linter and formatter configuration
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "S603",   # subprocess-without-shell-check (we explicitly use shell=False)
    "S607",   # start-process-with-partial-path (socat is found via PATH)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

# ---------------------------------------------------------------------------
# mypy type checking configuration
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["socat_manager"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 1
fail_under = 68
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
